<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile.ProfileFragment"
    android:id="@+id/profile_setting">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/white">

        <ImageButton
            android:background="@drawable/rectangle_border_gray_200_radius_27_5"
            android:id="@+id/btnArrowleft"
            android:layout_height="@dimen/_55pxh"
            android:layout_marginBottom="@dimen/_4pxv"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="@dimen/_55pxh"
            android:paddingHorizontal="@dimen/_18pxh"
            android:paddingVertical="@dimen/_18pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_arrowleft_bluegray_800"
            tools:ignore="ContentDescription"
            android:layout_marginStart="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_account_settings"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfprodisplaybold"
            android:text="@string/title_account"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            android:layout_marginStart="-100px"
            android:layout_marginEnd="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtitle_account_settings"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_account_settings"
            android:fontFamily="@font/sfprodisplayregular"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="-210px"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/title_account_settings"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_picture"
            android:layout_width="122dp"
            android:layout_height="122dp"
            android:src="@drawable/logo_program_pengembangan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

<!--        <com.google.android.material.imageview.ShapeableImageView-->
<!--            android:id="@+id/btn_edit_profile_pic"-->
<!--            android:layout_width="36dp"-->
<!--            android:layout_height="36dp"-->
<!--            android:src="@drawable/edit_icon"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.26"-->
<!--            app:layout_constraintHorizontal_bias="0.65"/>-->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_username"
            android:text=""
            android:textAlignment="center"
            android:fontFamily="@font/sfprodisplaybold"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/username_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_picture"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            android:text=""
            android:textAlignment="center"
            android:fontFamily="@font/sfprodisplayregular"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            style="@style/TextInputLayout"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditText"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:longClickable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_username"
            style="@style/TextInputLayout"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_fullname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditText"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:longClickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/useradmin_mail"
            style="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/TextInputEditText"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:longClickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/user_role"
            style="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/TextInputEditText"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:longClickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/phone_number"
            style="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_role">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/TextInputEditText"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:longClickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_logout"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:src="@drawable/log_out_button"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_phone_number"
            android:layout_marginTop="18dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>